customer is done
