# API/Controllers/CustomerController.cs
@@ -11,8 +11,16 @@ namespace API.Controllers
     [Authorize(Roles = "IT,Supervisor,Dietitian")]
     public class CustomerController : CRUDController<Customer>
     {
+        private ICustomerLogic _logic;
         public CustomerController(ICustomerLogic logic) : base(logic)
         {
+            _logic = logic;
+        }
+
+        [HttpGet("GetAllCustomerListView")]
+        public async Task<ICollection<CustomerListView>> GetAllCustomerListView()
+        {
+            return await _logic.GetAllCustomerListViewAsync();
         }
     }
 }
