# Models/DTOs/UpdateAllergenCustomerDTO.cs
@@ -1,0 +1,10 @@
+﻿using Models.Models;
+
+namespace Models.DTOs
+{
+    public class UpdateAllergenCustomersDTO
+    {
+        public int CustomerId { get; set; }
+        public List<AllergenCustomer> AllergenCustomers { get; set; }
+    }
+}
