# Models/Models/AllergenCustomer.cs
@@ -1,0 +1,15 @@
+﻿// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
+#nullable disable
+using System;
+using System.Collections.Generic;
+
+namespace Models.Models;
+
+public partial class AllergenCustomer
+{
+    public int AllergenCustomerId { get; set; }
+
+    public int AllergenId { get; set; }
+
+    public int CustomerId { get; set; }
+}
