# Models/Models/CustomerListView.cs
@@ -1,0 +1,23 @@
+﻿// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
+#nullable disable
+using System;
+using System.Collections.Generic;
+
+namespace Models.Models;
+
+public partial class CustomerListView
+{
+    public int CustomerId { get; set; }
+
+    public string CustomerName { get; set; }
+
+    public bool HasAllergies { get; set; }
+
+    public bool HasDiabetes { get; set; }
+
+    public string AgeCategoryName { get; set; }
+
+    public int AgeCategoryId { get; set; }
+
+    public string Allergies { get; set; }
+}
