# Repository/ModelRepositories/CustomerRepository.cs
@@ -1,4 +1,5 @@
-﻿using Models.Models;
+﻿using Microsoft.EntityFrameworkCore;
+using Models.Models;
 using Repository.Interfaces;
 using Repository.ModelRepositories.GenericRepository;
 
@@ -8,6 +9,10 @@ namespace Repository.ModelRepositories
     {
         public CustomerRepository(DataBaseContext dbContext) : base(dbContext)
         {
+        }
+        public async Task<ICollection<CustomerListView>> GetAllCustomerListViewAsync()
+        {
+            return await _dbContext.CustomerListViews.ToListAsync();
         }
     }
 }
